--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                         </div>
                         <div class="product__trending-cont">
                             <ul class="product__trending-cont-list row">
-                                <li class="product__trending-cont-item col-3 product__trending-cont-item-soldout--active">
+                                <li class="product__trending-cont-item col-3 product-soldout--active">
                                     <a href="#" class="prodcut__trending-cont-item-link">
                                         <img src="https://cdn.divineshop.vn/image/catalog/Anh-SP/Netflix/Divine-Shop-NETFLIX-1-thang-23298258-63925.jpg?hash=1710321229" alt="" class="product__trending-cont-item-img">
                                         <div class="product__trending-cont-item-title">Tài Khoản Netflix Premium 1 tháng - Xem phim chất lượng 4k và Full HD</div>
@@ -450,7 +450,7 @@
                                     <div class="product__trending-cont-item-percent">-62%</div>
                                     <div class="product__trending-cont-item-soldout">Hết hàng</div>
                                 </li>
-                                <li class="product__trending-cont-item col-3 product__trending-cont-item-soldout--active">
+                                <li class="product__trending-cont-item col-3 product-soldout--active">
                                     <a href="#" class="prodcut__trending-cont-item-link">
                                         <img src="https://cdn.divineshop.vn/image/catalog/Anh-SP/Netflix/Divine-Shop-NETFLIX-1-thang-23298258-63925.jpg?hash=1710321229" alt="" class="product__trending-cont-item-img">
                                         <div class="product__trending-cont-item-title">Tài Khoản Netflix Premium 1 tháng - Xem phim chất lượng 4k và Full HD</div>
@@ -520,7 +520,121 @@
                         </li>
                     </ul>
                 </div>
-
+                <div class="product__main">
+                    <div class="product__main-header">
+                        <div class="product__main-header-title">
+                            <div class="product__main-title-text">Sản phẩm nổi bật</div>
+                            <div class="product__header-btn">
+                                <a href="#" class="product__btn-link">Khám phá</a>
+                            </div>
+                        </div>
+                        <div class="product__main-header-description">Danh sách những sản phẩm theo xu hướng mà có thể bạn sẽ thích</div>
+                    </div>
+                    <div class="product__main-cont">
+                        <ul class="product__main-cont-list row">
+                            <li class="product__main-cont-item col-3 product-soldout--active">
+                                <a href="#" class="prodcut__main-cont-item-link">
+                                    <img src="https://cdn.divineshop.vn/image/catalog/Anh-SP/Netflix/Divine-Shop-NETFLIX-1-thang-23298258-63925.jpg?hash=1710321229" alt="" class="product__main-cont-item-img">
+                                    <div class="product__main-cont-item-title">Tài Khoản Netflix Premium 1 tháng - Xem phim chất lượng 4k và Full HD</div>
+                                </a>
+                                <div class="product__main-cont-item-price">99.000đ</div>
+                                <div class="product__main-cont-item-discount">260.000đ</div>
+                                <div class="product__main-cont-item-percent">-62%</div>
+                                <div class="product__main-cont-item-soldout">Hết hàng</div>
+                            </li>
+                            <li class="product__main-cont-item col-3 product__main-cont-item-sale">
+                                <a href="#" class="prodcut__main-cont-item-link">
+                                    <img src="https://cdn.divineshop.vn/image/catalog/Anh-SP/Netflix/Divine-Shop-NETFLIX-1-thang-23298258-63925.jpg?hash=1710321229" alt="" class="product__main-cont-item-img">
+                                    <div class="product__main-cont-item-title">Tài Khoản Netflix Premium 1 tháng - Xem phim chất lượng 4k và Full HD</div>
+                                </a>
+                                <div class="product__main-cont-item-price">99.000đ</div>
+                                <div class="product__main-cont-item-discount">260.000đ</div>
+                                <div class="product__main-cont-item-percent">-62%</div>
+                                <div class="product__main-cont-item-soldout">Hết hàng</div>
+                            </li>
+                            <li class="product__main-cont-item col-3">
+                                <a href="#" class="prodcut__main-cont-item-link">
+                                    <img src="https://cdn.divineshop.vn/image/catalog/Anh-SP/Netflix/Divine-Shop-NETFLIX-1-thang-23298258-63925.jpg?hash=1710321229" alt="" class="product__main-cont-item-img">
+                                    <div class="product__main-cont-item-title">Tài Khoản Netflix Premium 1 tháng - Xem phim chất lượng 4k và Full HD</div>
+                                </a>
+                                <div class="product__main-cont-item-price">99.000đ</div>
+                                <div class="product__main-cont-item-discount">260.000đ</div>
+                                <div class="product__main-cont-item-percent">-62%</div>
+                                <div class="product__main-cont-item-soldout">Hết hàng</div>
+                            </li>
+                            <li class="product__main-cont-item col-3">
+                                <a href="#" class="prodcut__main-cont-item-link">
+                                    <img src="https://cdn.divineshop.vn/image/catalog/Anh-SP/Netflix/Divine-Shop-NETFLIX-1-thang-23298258-63925.jpg?hash=1710321229" alt="" class="product__main-cont-item-img">
+                                    <div class="product__main-cont-item-title">Tài Khoản Netflix Premium 1 tháng - Xem phim chất lượng 4k và Full HD</div>
+                                </a>
+                                <div class="product__main-cont-item-price">99.000đ</div>
+                                <div class="product__main-cont-item-discount">260.000đ</div>
+                                <div class="product__main-cont-item-percent">-62%</div>
+                                <div class="product__main-cont-item-soldout">Hết hàng</div>
+                            </li>
+                            <li class="product__main-cont-item col-3">
+                                <a href="#" class="prodcut__main-cont-item-link">
+                                    <img src="https://cdn.divineshop.vn/image/catalog/Anh-SP/Netflix/Divine-Shop-NETFLIX-1-thang-23298258-63925.jpg?hash=1710321229" alt="" class="product__main-cont-item-img">
+                                    <div class="product__main-cont-item-title">Tài Khoản Netflix Premium 1 tháng - Xem phim chất lượng 4k và Full HD</div>
+                                </a>
+                                <div class="product__main-cont-item-price">99.000đ</div>
+                                <div class="product__main-cont-item-discount">260.000đ</div>
+                                <div class="product__main-cont-item-percent">-62%</div>
+                                <div class="product__main-cont-item-soldout">Hết hàng</div>
+                            </li>
+                            <li class="product__main-cont-item col-3 product__main-cont-item-sale">
+                                <a href="#" class="prodcut__main-cont-item-link">
+                                    <img src="https://cdn.divineshop.vn/image/catalog/Anh-SP/Netflix/Divine-Shop-NETFLIX-1-thang-23298258-63925.jpg?hash=1710321229" alt="" class="product__main-cont-item-img">
+                                    <div class="product__main-cont-item-title">Tài Khoản Netflix Premium 1 tháng - Xem phim chất lượng 4k và Full HD</div>
+                                </a>
+                                <div class="product__main-cont-item-price">99.000đ</div>
+                                <div class="product__main-cont-item-discount">260.000đ</div>
+                                <div class="product__main-cont-item-percent">-62%</div>
+                                <div class="product__main-cont-item-soldout">Hết hàng</div>
+                            </li>
+                            <li class="product__main-cont-item col-3">
+                                <a href="#" class="prodcut__main-cont-item-link">
+                                    <img src="https://cdn.divineshop.vn/image/catalog/Anh-SP/Netflix/Divine-Shop-NETFLIX-1-thang-23298258-63925.jpg?hash=1710321229" alt="" class="product__main-cont-item-img">
+                                    <div class="product__main-cont-item-title">Tài Khoản Netflix Premium 1 tháng - Xem phim chất lượng 4k và Full HD</div>
+                                </a>
+                                <div class="product__main-cont-item-price">99.000đ</div>
+                                <div class="product__main-cont-item-discount">260.000đ</div>
+                                <div class="product__main-cont-item-percent">-62%</div>
+                                <div class="product__main-cont-item-soldout">Hết hàng</div>
+                            </li>
+                            <li class="product__main-cont-item col-3 product__main-cont-item-sale">
+                                <a href="#" class="prodcut__main-cont-item-link">
+                                    <img src="https://cdn.divineshop.vn/image/catalog/Anh-SP/Netflix/Divine-Shop-NETFLIX-1-thang-23298258-63925.jpg?hash=1710321229" alt="" class="product__main-cont-item-img">
+                                    <div class="product__main-cont-item-title">Tài Khoản Netflix Premium 1 tháng - Xem phim chất lượng 4k và Full HD</div>
+                                </a>
+                                <div class="product__main-cont-item-price">99.000đ</div>
+                                <div class="product__main-cont-item-discount">260.000đ</div>
+                                <div class="product__main-cont-item-percent">-62%</div>
+                                <div class="product__main-cont-item-soldout">Hết hàng</div>
+                            </li>
+                        </ul>
+                    </div>  
+                    <div class="product__main-footer">
+                        <div class="product__main-footer-text">Xem thêm</div>
+                    </div>
+                </div>
+                <div class="product__askacc">
+                    <div class="product__askacc-img">
+                        <img src="https://cdn.divineshop.vn/static/528b91cfa29c7ffd85418f4b1e8cc8ce.svg" alt="anh" class="product__askacc-img-item">
+                    </div>
+                    <div class="product__askacc-cont">
+                        <div class="product__askacc-title">Bạn chưa có tài khoản?</div>
+                        <div class="product__askacc-desscription">Hãy tạo ngay một tài khoản để sử dụng đầy đủ các tính năng, tích lũy ưu đãi khi thanh toán các sản phẩm và tham gia vào chương trình Giới thiệu bạn bè nhận hoa hồng vĩnh viễn tại Divine Shop.</div>
+                        <div class="product__askacc-btn">
+                            <a href="#" class="product__askacc-btn-link">Đăng ký ngay</a>
+                        </div>
+                        <div class="product__askacc-login">
+                            Hoặc bạn đã có tài khoản?
+                            <a href="#" class="product__askacc-login-link">Đăng nhập</a>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
     </constainer>
     <script src="./index.js"></script>
