--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
         <!-- mainUI -->
         <div class="header__mainUI">
             <div class="header__mainUI-logo">
-                <img src="./img/327259348_704303358037119_7933213491662046034_n.jpg" alt="logo" class="header__mainUI-logo-img">
-                <div class="header__mainUI-logo-text">Divine Shop</div>
+                <a href="#" class="header__mainUI-logo-link">
+                    <img src="./img/327259348_704303358037119_7933213491662046034_n.jpg" alt="logo" class="header__mainUI-logo-img">
+                    <div class="header__mainUI-logo-text">Divine Shop</div>
+                </a>
             </div>
             <div class="header__mainUI-search">
                 <input type="text" class="header__mainUI-search-box" placeholder="Tìm kiếm sản phẩm">
@@ -116,49 +118,48 @@
                 </li>
             </ul>
         </div>
-        
-    </header>
-    <!-- constainer -->
-    <constainer class="container">
-        <!-- category -->
-            <div class="category">
-                <div class="category__list">
-                    <div class="category__item">
-                        <i class="category-icon fa-solid fa-list"></i>
-                    </div>
-                    <div class="category__item">
-                        Danh mục sản phẩm
-                    </div>
+        <div class="category">
+            <div class="category__list">
+                <div class="category__item">
+                    <i class="category-icon fa-solid fa-list"></i>
                 </div>
-                <div class="category__info">
-                    <ul class="category__info-list">
-                        <li class="category__info-item">
-                            <a href="#" class="category__info-link">
-                                <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/Nap-thesvg-30724.svg?hash=1640449820" alt="phone" class="category__info-img">
-                                 <div class="category__info-text">Thủ thuật & Tin Tức</div>
-                            </a>                            
-                        </li>
-                        <li class="category__info-item">
-                            <a href="#" class="category__info-link">
-                                <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/Gioi-thieu-ban-be-87652.svg?hash=1640449820" alt="" class="category__info-img">
-                                <div class="category__info-text">Giới thiệu bạn bè</div>
-                            </a>                            
-                        </li>
-                        <li class="category__info-item">
-                            <a href="#" class="category__info-link">
-                                <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/Lien-he-hop-tac-33199.svg?hash=1640449820" alt="" class="category__info-img">
-                                <div class="category__info-text">Liên hệ hợp tác</div>
-                            </a>                         
-                        </li>
-                        <li class="category__info-item">
-                            <a href="#" class="category__info-link">
-                                <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/Uu-dai-khach-vip-79547.svg?hash=1640449820" alt="" class="category__info-img">
-                               <div class="category__info-text">Ưu đãi khách hàng VIP</div>
-                            </a>                   
-                        </li>
-                    </ul>
+                <div class="category__item">
+                    Danh mục sản phẩm
                 </div>
             </div>
+            <div class="category__info">
+                <ul class="category__info-list">
+                    <li class="category__info-item">
+                        <a href="#" class="category__info-link">
+                            <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/Nap-thesvg-30724.svg?hash=1640449820" alt="phone" class="category__info-img">
+                             <div class="category__info-text">Thủ thuật & Tin Tức</div>
+                        </a>                            
+                    </li>
+                    <li class="category__info-item">
+                        <a href="#" class="category__info-link">
+                            <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/Gioi-thieu-ban-be-87652.svg?hash=1640449820" alt="" class="category__info-img">
+                            <div class="category__info-text">Giới thiệu bạn bè</div>
+                        </a>                            
+                    </li>
+                    <li class="category__info-item">
+                        <a href="#" class="category__info-link">
+                            <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/Lien-he-hop-tac-33199.svg?hash=1640449820" alt="" class="category__info-img">
+                            <div class="category__info-text">Liên hệ hợp tác</div>
+                        </a>                         
+                    </li>
+                    <li class="category__info-item">
+                        <a href="#" class="category__info-link">
+                            <img src="https://cdn.divineshop.vn/image/catalog/Anh/Icon%20svg/Uu-dai-khach-vip-79547.svg?hash=1640449820" alt="" class="category__info-img">
+                           <div class="category__info-text">Ưu đãi khách hàng VIP</div>
+                        </a>                   
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <!-- container -->
+    <container class="container">
+        <!-- category -->
             <div class="product">
                 <div class="product__category">
                     <div class="product__category-list-block">
@@ -227,12 +228,24 @@
                     </div>
                     <div class="product__category-slide">
                         <div class="product__category-slide-list">
-                            <img src="https://cdn.divineshop.vn/image/catalog/Banner/Gmail-60882.png?hash=1691142559" alt="" class="product__category-slide-img">
-                            <img src="https://cdn.divineshop.vn/image/catalog/Anh-SP/Khác/chatGPT-70878.jpg?hash=1681283148" alt="" class="product__category-slide-img">
-                            <img src="https://cdn.divineshop.vn/image/catalog/Anh/24.12.21/tối ưu công việc-45178.png?hash=1640349471" alt="" class="product__category-slide-img">
-                            <img src="https://cdn.divineshop.vn/image/catalog/Banner/banner Google One (3)-10567.png?hash=1658937523" alt="" class="product__category-slide-img">
-                            <img src="https://cdn.divineshop.vn/image/catalog/Anh/14.03.2022/AutoDesk Main banner-89472.png?hash=1656637545" alt="" class="product__category-slide-img">
-                            <img src="https://cdn.divineshop.vn/image/catalog/Anh/Banner/học tập phát triển-95166-17706.png?hash=1659929879" alt="" class="product__category-slide-img">
+                            <a href="#" class="product__category-slide-link">
+                                <img src="https://cdn.divineshop.vn/image/catalog/Banner/Gmail-60882.png?hash=1691142559" alt="" class="product__category-slide-img">
+                            </a>
+                            <a href="#" class="product__category-slide-link">
+                                <img src="https://cdn.divineshop.vn/image/catalog/Anh-SP/Khác/chatGPT-70878.jpg?hash=1681283148" alt="" class="product__category-slide-img">
+                            </a>
+                            <a href="#" class="product__category-slide-link">
+                                <img src="https://cdn.divineshop.vn/image/catalog/Anh/24.12.21/tối ưu công việc-45178.png?hash=1640349471" alt="" class="product__category-slide-img">
+                            </a>
+                            <a href="#" class="product__category-slide-link">
+                                <img src="https://cdn.divineshop.vn/image/catalog/Banner/banner Google One (3)-10567.png?hash=1658937523" alt="" class="product__category-slide-img">
+                            </a>
+                            <a href="#" class="product__category-slide-link">
+                                <img src="https://cdn.divineshop.vn/image/catalog/Anh/14.03.2022/AutoDesk Main banner-89472.png?hash=1656637545" alt="" class="product__category-slide-img">
+                            </a>
+                            <a href="#" class="product__category-slide-link">
+                                <img src="https://cdn.divineshop.vn/image/catalog/Anh/Banner/học tập phát triển-95166-17706.png?hash=1659929879" alt="" class="product__category-slide-img">
+                            </a> 
                         </div>
                         <div class="product__category-slide-btns">
                             <div class="btn-left btn">
@@ -253,25 +266,37 @@
                     </div>
                     <div class="product__category-extra">
                         <div class="product__category-extra-item">
-                            <img src="https://cdn.divineshop.vn/image/catalog/Banner/VPN%20(3)-84756.png?hash=1707128734" alt="" class="product__category-extra-img">
+                            <a href="#" class="product__category-extra-link">
+                                <img src="https://cdn.divineshop.vn/image/catalog/Banner/VPN%20(3)-84756.png?hash=1707128734" alt="" class="product__category-extra-img">
+                            </a>
                         </div>
                         <div class="product__category-extra-item">
-                            <img src="https://cdn.divineshop.vn/image/catalog/Banner/VPN%20(3)-84756.png?hash=1707128734" alt="" class="product__category-extra-img">
+                            <a href="#" class="product__category-extra-link">
+                                <img src="https://cdn.divineshop.vn/image/catalog/Banner/VPN%20(3)-84756.png?hash=1707128734" alt="" class="product__category-extra-img">
+                            </a>                        
                         </div>
                     </div>
                 </div>
                 <div class="product__category-extra-2">
                     <div class="product__category-extra-item">
-                        <img src="https://cdn.divineshop.vn/image/catalog/Banner/VPN%20(3)-84756.png?hash=1707128734" alt="" class="product__category-extra-img">
+                        <a href="#" class="product__category-extra-link">
+                            <img src="https://cdn.divineshop.vn/image/catalog/Banner/VPN%20(3)-84756.png?hash=1707128734" alt="" class="product__category-extra-img">
+                        </a>                    
                     </div>
                     <div class="product__category-extra-item">
-                        <img src="https://cdn.divineshop.vn/image/catalog/Banner/VPN%20(3)-84756.png?hash=1707128734" alt="" class="product__category-extra-img">
+                        <a href="#" class="product__category-extra-link">
+                            <img src="https://cdn.divineshop.vn/image/catalog/Banner/VPN%20(3)-84756.png?hash=1707128734" alt="" class="product__category-extra-img">
+                        </a>                    
                     </div>
                     <div class="product__category-extra-item">
-                        <img src="https://cdn.divineshop.vn/image/catalog/Banner/VPN%20(3)-84756.png?hash=1707128734" alt="" class="product__category-extra-img">
+                        <a href="#" class="product__category-extra-link">
+                            <img src="https://cdn.divineshop.vn/image/catalog/Banner/VPN%20(3)-84756.png?hash=1707128734" alt="" class="product__category-extra-img">
+                        </a>                    
                     </div>
                     <div class="product__category-extra-item">
-                        <img src="https://cdn.divineshop.vn/image/catalog/Banner/VPN%20(3)-84756.png?hash=1707128734" alt="" class="product__category-extra-img">
+                        <a href="#" class="product__category-extra-link">
+                            <img src="https://cdn.divineshop.vn/image/catalog/Banner/VPN%20(3)-84756.png?hash=1707128734" alt="" class="product__category-extra-img">
+                        </a>                    
                     </div>
                 </div>
                 <div class="product__main">
@@ -642,7 +667,7 @@
                     </a>
                 </div>
             </div>
-    </constainer>
+    </container>
     <!-- footer -->
     <footer class="footer">
         <div class="footer__social">
